# router/app.go
@@ -20,6 +20,8 @@ func Router() *gin.Engine {
 
 	r.GET("/index", service.GetIndex)
 	r.GET("/user/getUserList", service.GetUserList)
-
+	r.GET("/user/createUser", service.CreateUser)
+	r.GET("/user/DeleteUser", service.DeleteUser)
+	r.POST("/user/UpdateUser", service.UpdateUser)
 	return r
 }
