# service/userservice.go
@@ -2,12 +2,14 @@ package service
 
 import (
 	"heyChat/models"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
 
 // GetUserList
-// @Tags 首页
+// @Summary 用户列表
+// @Tags 用户模块
 // @Success 200 {string} json{"code", "message"}
 // @Router /user/getUserList [get]
 func GetUserList(c *gin.Context) {
@@ -15,5 +17,67 @@ func GetUserList(c *gin.Context) {
 	data = models.GetUserList()
 	c.JSON(200, gin.H{
 		"message": data,
+	})
+}
+
+// CreateUser
+// @Summary 新增用户
+// @Tags 用户模块
+// @param name query string false "用户名"
+// @param password query string false "密码"
+// @param repassword query string false "确认密码"
+// @Success 200 {string} json{"code","message"}
+// @Router /user/createUser [get]
+func CreateUser(c *gin.Context) {
+	user := models.UserBasic{}
+	user.Name = c.Query("name")
+	password := c.Query("password")
+	repassword := c.Query("repassword")
+	if password != repassword {
+		c.JSON(-1, gin.H{
+			"message": "两次密码不一致",
+		})
+		return
+	}
+	user.PassWord = password
+	models.CreateUser(user)
+	c.JSON(200, gin.H{
+		"message": "新增用户成功",
+	})
+}
+
+// DeleteUser
+// @Summary 删除用户
+// @Tags 用户模块
+// @param id query string false "用户名"
+// @Success 200 {string} json{"code","message"}
+// @Router /user/DeleteUser [get]
+func DeleteUser(c *gin.Context) {
+	user := models.UserBasic{}
+	id, _ := strconv.Atoi(c.Query("id"))
+	user.ID = uint(id)
+	models.DeleteUser(user)
+	c.JSON(200, gin.H{
+		"message": "删除用户成功",
+	})
+}
+
+// UpdateUser
+// @Summary 修改用户
+// @Tags 用户模块
+// @param id formData string false "id"
+// @param name formData string false "用户名"
+// @param password formData string false "密码"
+// @Success 200 {string} json{"code","message"}
+// @Router /user/UpdateUser [post]
+func UpdateUser(c *gin.Context) {
+	user := models.UserBasic{}
+	id, _ := strconv.Atoi(c.PostForm("id"))
+	user.ID = uint(id)
+	user.Name = c.PostForm("name")
+	user.PassWord = c.PostForm("password")
+	models.DeleteUser(user)
+	c.JSON(200, gin.H{
+		"message": "修改用户成功",
 	})
 }
